Fixed overflow of about page

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,5 +1,6 @@
 main {
     padding: 1rem;
+    word-break: break-word;
 }
 
 #about_the_page {
@@ -20,7 +21,7 @@ main {
     background-color: #dfdfdf82;
     border-radius: 1rem;
     padding: 1rem;
-    width: min-content;
+    width: fit-content;
     display: flex;
     align-items: center;
     font-size: 1.5rem;
