--- a/public/css/general.css
+++ b/public/css/general.css
@@ -18,6 +18,7 @@ header {
 main {
     flex: 1;
     max-width: 1140px;
+    width: 100%;
 }
 
 footer {
